--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -6,8 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>WHO WE ARE</h1>
-            <h2>Team of alternative energy specialists</h2>
+            <h1>GREEN ENERGY SPECIALISTS</h1> 
         </div>
     </div>
 </div>
@@ -389,7 +388,7 @@
             </div>
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/tola.png' %}" alt="Project Manager">
+                    <!-- <img src="{% static 'images/tola.png' %}" alt="Project Manager"> -->
                     <div class="team-text">
                         <h5>Adeyemi Tola</h5>
                         <p>Project Manager</p>
