--- a/greensource_pages/templates/greensource_pages/company-profile.html
+++ b/greensource_pages/templates/greensource_pages/company-profile.html
@@ -5,8 +5,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>COMPANY PROFILE</h1>
-            <h2>Overview of what we represent</h2>
+            <h1>GREENSOURCE COMPANY PROFILE</h1>
         </div>
     </div>
 </div>
@@ -30,9 +29,7 @@
                     <li>Company registration number: RC: 3231396</li>
                     <li>(+234)8029442697</li>
                     <li>Website: greensourcenergy.com</li>
-                    <li>Email: <a href="javascript:location='mailto:\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d';void 0">
-                        <script type="text/javascript">document.write('\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script>
-                    </a>
+                    <li>Email: <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
                     </li>
                     <li>Physical address: Heritage Street of anobi Noah omu-arogun mowe-ofada, Ogun State Nigeria.</li>
                 </ul>
