--- a/greensource_pages/templates/greensource_pages/electrical-design.html
+++ b/greensource_pages/templates/greensource_pages/electrical-design.html
@@ -3,13 +3,12 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} Solar street light solution{% endblock %}
+{% block title %}{{ block.super }} Solar lighting solution{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR LIGHTING</h1>
-            <h2>Smart lighting solutions</h2>
+            <h1>SOLAR LIGHTING SOLUTION</h1>
         </div>
     </div>
 </div>
