--- a/greensource_pages/templates/greensource_pages/projects.html
+++ b/greensource_pages/templates/greensource_pages/projects.html
@@ -8,8 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>RECENT PROJECTS</h1>
-            <h2>Some of our featured projects</h2>
+            <h1>GREEN ENERGY PROJECTS</h1>
         </div>
     </div>
 </div>
