--- a/greensource_pages/templates/greensource_pages/service-detail.html
+++ b/greensource_pages/templates/greensource_pages/service-detail.html
@@ -9,8 +9,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SERVICE DETAILS</h1>
-            <h2></h2>
+            <h1>SOLAR SERVICE DETAILS</h1>
         </div>
     </div>
 </div>
@@ -48,62 +47,28 @@ menu-active
     <section>
         <div class="row padding">
                 <div class="radial col-lg-4 col-sm-6 col-xs-12">
-                        <div class="tox-progress" data-size="150" data-thickness="10" data-color="#006400" data-background="#f1f1f1" data-progress="60"
-                            data-speed="15000">
-                            <div class="tox-progress-content" data-vcenter="true">
-                                60%
-                            </div>     
-                        </div>
+                    <div id="circle">
+                    </div>
                         <h5>Energy saving</h5>
                         <p>On installation you get to save money through controlled energy monitoring and consumption.</p>
                     </div>
                     <div class="radial col-lg-4 col-sm-6 col-xs-12">
-                            <div class="tox-progress" data-size="150" data-thickness="10" data-color="#006400" data-background="#f1f1f1" data-progress="75"
-                                data-speed="15000">
-                                <div class="tox-progress-content" data-vcenter="true">
-                                    75%
-                                </div>     
-                            </div>
                             <h5>unique designs</h5>
                             <p>Our unique set of custom designs are tailored to meet your energy needs irrespective of energy consumption.</p>
                         </div>
             <div class="radial col-lg-4 col-sm-6 col-xs-12">
-                <div class="tox-progress" data-size="150" data-thickness="10" data-color="#006400" data-background="#f1f1f1" data-progress="80"
-                    data-speed="15000">
-                    <div class="tox-progress-content" data-vcenter="true">
-                        80%
-                    </div>
-                </div>
                 <h5>Long term savings</h5>
                 <p>With the initial cost of acquiring a solar system, you will recover the money invested within 5yrs</p>
             </div>
             <div class="radial col-lg-4 col-sm-6 col-xs-12">
-                <div class="tox-progress" data-size="150" data-thickness="10" data-color="#006400" data-background="#f1f1f1" data-progress="85"
-                    data-speed="15000">
-                    <div class="tox-progress-content" data-vcenter="true">
-                        85%
-                    </div>
-                </div>
                     <h5>client satisfaction</h5>
                     <p>With great partnership & effective communication, Our goal is to deliver quality service every step of the way.</p>
             </div>
             <div class="radial col-lg-4 col-sm-6 col-xs-12">
-                    <div class="tox-progress" data-size="150" data-thickness="10" data-color="#006400" data-background="#f1f1f1" data-progress="90"
-                        data-speed="15000">
-                        <div class="tox-progress-content" data-vcenter="true">
-                            90%
-                        </div>     
-                    </div>
                     <h5>Sustainable/Durable</h5>
                     <p>Low maintenance, reliability and sustainability are the hallmark of our cutting edge solar energy system. </p>
                 </div>
             <div class="radial col-lg-4 col-sm-6 col-xs-12">
-                <div class="tox-progress" data-size="150" data-thickness="10" data-color="#006400" data-background="#f1f1f1" data-progress="100"
-                    data-speed="15000">
-                    <div class="tox-progress-content" data-vcenter="true">
-                        100%
-                    </div>     
-                </div>
                 <h5>Clean energy</h5>
                 <p>Solar energy technologies produces clean energy with zero carbon emission improving living standard.</p>
             </div>
