--- a/greensource_pages/templates/greensource_pages/training.html
+++ b/greensource_pages/templates/greensource_pages/training.html
@@ -7,7 +7,7 @@
     <div class="container-fluid padding">
         <div class="training row padding">
             <div class="col-lg-12">
-                <h1>Pv system training</h1>
+                <h1>SOLAR ENERGY TRAINING</h1>
                 <h2>Coming soon</h2>
                 <div class="count">
                     <div class="countd">
