--- a/news/templates/article_category.html
+++ b/news/templates/article_category.html
@@ -9,8 +9,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>LATEST NEWS</h1>
-            <h2>Stay updated with the latest trends in the industry</h2>
+            <h1>SOLAR ENERGY NEWS</h1>
         </div>
     </div>
 </div>
