--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -11,9 +11,6 @@
   gtag('config', 'UA-179025578-1');
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script async src="https://cdn.ampproject.org/v0.js"></script>
-<link rel="canonical" href="https://amp.dev/documentation/guides-and-tutorials/start/create/basic_markup/">
-    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="audience" content="all" />
     <meta name="robots" content="index, follow" />
@@ -60,12 +57,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css" rel="stylesheet" />
     <link href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" />
     <link href="{% static 'src/simple-lightbox.min.css' %}" rel='stylesheet' />
-    <link href="{% static 'src/tox-progress.css' %}" rel="stylesheet" />
-    <link href="{% static 'animate.css' %}" rel="stylesheet" type="text/css" />
-    <link href="{% static 'demo.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'animate.min.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'demo.min.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'owl-carousel/owl.carousel.css' %}" rel="stylesheet" />
     <link href="{% static 'owl-carousel/owl.theme.default.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'src/videopopup.css' %}" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}" />
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}" />
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}" />
@@ -86,14 +81,14 @@
     fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" src="https://www.facebook.com/tr?id=680910845861426&ev=PageView&noscript=1"/></noscript>
-    <script type="application/ld+json">
+    <!-- <script type="application/ld+json">
         {
           "@context": "https://schema.org",
           "@type": "Energy Company",
           "image": [
           "https://greensourcenergy.com/static/images/about-us.jpg"
-          "https://greensourcenergy.com/static/images/about-us.jpg"
-          "https://greensourcenergy.com/static/images/about-us.jpg"
+          "https://greensourcenergy.com/static/images/greensourcelogo-3.png"
+          "https://greensourcenergy.com/static/images/maintenance.jpg"
           ]
           "name": "GREENSOURCE ENERGY",
           "url": "greensourcenergy.com",
@@ -102,13 +97,12 @@
             "streetAddress": "1, heritage st by anobi noah, arogun",
             "addressLocality": "Mowe - Ofada"
             "addressRegion": "Ogun"
-            "postalCode": "110115",
             "addressCountry": "Nigeria"
             "telephone": "+2348029442697",
             "contactType": "professional service"
           }
         }
-    </script>
+    </script> -->
     <script>
         (function () {
         var options = {
@@ -122,6 +116,9 @@
         var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
         })();
     </script>  
+    <link rel="stylesheet" type="text/css" href="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.css" />
+    <script src="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.js" defer></script>
+    <script>window.addEventListener("load", function () { window.wpcc.init({ "border": "normal", "corners": "small", "colors": { "popup": { "background": "#222222", "text": "#ffffff", "border": "#192712" }, "button": { "background": "#b5e1a0", "text": "#000000" } }, "position": "bottom-right", "content": { "href": "https://www.greensourcenergy.com/privacy/" } }) });</script>
 </head>
 <body>
     <div class="review container-fluid padding">
@@ -161,9 +158,7 @@
             <div class="book col-xs-12 col-lg-4 col-md-6">
                 <p>
                     <i class="far fa-envelope"></i>
-                    <a href="javascript:location='mailto:\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d';void 0">
-                        <script type="text/javascript">document.write('\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script>
-                    </a>
+                    <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
                 </p>
             </div>
         </div>
@@ -256,7 +251,7 @@
                             <a href="{% url 'electrical_design' %}">Street Lighting</a>
                         </li>
                         <li>
-                            <a href="{% url 'training' %}">Training</a>
+                            <a href="{% url 'solar_water_pump' %}">Solar Pump</a>
                         </li>
                     </ul>
                 </div>
@@ -296,9 +291,7 @@
                         <p>1, Heritage street by anobi Noah, arogun Mowe-Ofada Ogun.</p>
                         <i class="far fa-envelope"></i>
                         <p>
-                            <a href="javascript:location='mailto:\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d';void 0">
-                                <script type="text/javascript">document.write('\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script>
-                            </a>
+                            <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
                         </p>
                         <i class="fas fa-phone"></i>
                         <p>(234)802 944 2697 <br /> (234)807 606 8609</p>
@@ -329,25 +322,21 @@
             </div>
         </div>
     </section>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>   -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
     <script>window.jQuery || document.write('<script src="/static/js/jquery-3.3.1.min.js"><\/script>')</script></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script>window.jQuery || document.write('<script src="/static/js/popper.min.js"><\/script>')</script></script>
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script>if(typeof($.fn.modal) === 'undefined') {document.write('<script src="/static/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"><\/script>')}</script>
     <script src="{% static 'js/jquery-migrate.min.js' %}"></script>
     <script src="{% static 'js/main.js'%}"></script>
-    <script src="{% static 'src/tox-progress.min.js' %}"></script>
     <script src="{% static 'src/jquery.counterup.min.js' %}"></script>
     <script src="{% static 'src/waypoints.min.js' %}"></script>
     <script src="{% static 'src/wow.min.js' %}"></script>
-    <script src="{% static 'owl-carousel/owl.carousel.js' %}"></script>
-    <script src="{% static 'src/hoverIntent.js' %}"></script>
+    <script src="{% static 'owl-carousel/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'src/hoverIntent.min.js' %}"></script>
     <script src="{% static 'src/superfish.min.js' %}"></script>
     <script src="{% static 'src/simple-lightbox.min.js' %}"></script>
-    <script src="{% static 'src/videopopup.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
-    <!-- <script type=”text/javascript” src=”//cdn.jsdelivr.net/afterglow/latest/afterglow.min.js”></script> -->
 </body>
 </html>
 
