--- a/contact_us/templates/contact_us/contact.html
+++ b/contact_us/templates/contact_us/contact.html
@@ -10,7 +10,6 @@ menu-active
     <div class="header row padding text-center">
         <div class="col-12 animated fadeIn">
             <h1>GET IN TOUCH</h1>
-            <h2>Feel free to reach us through any of our platforms below</h2>
         </div>
     </div>
 </div>
@@ -27,9 +26,7 @@ menu-active
             <p><i class="fas fa-map-marker-alt"></i>1, Heritage street by anobi noah mowe-ofada Ogun state.</p>
             <p>
                 <i class="far fa-envelope"></i>
-                <a href="javascript:location='mailto:\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d';void 0">
-                        <script type="text/javascript">document.write('\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script>
-                    </a>
+                <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
             </p>
             <p><i class="fas fa-phone"></i>(234)802 944 2697 <br /> (234)807 606 8609</p>
         </div>
