--- a/greensource_pages/templates/greensource_pages/energy-management.html
+++ b/greensource_pages/templates/greensource_pages/energy-management.html
@@ -3,13 +3,12 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} Solar Energy Storage/Backup{% endblock %}
+{% block title %}{{ block.super }} Solar Energy Storage-Backup{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>ENERGY STORAGE SOLUTION</h1>
-            <h2></h2>
+            <h1>SOLAR STORAGE SOLUTION</h1>
         </div>
     </div>
 </div>
