--- a/greensource_pages/templates/greensource_pages/gallery.html
+++ b/greensource_pages/templates/greensource_pages/gallery.html
@@ -5,8 +5,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>OUR GALLERY</h1>
-            <h2>Surf through our work / activities</h2>
+            <h1>GREEN ENERGY GALLERY</h1>
         </div>
     </div>
 </div>
