--- a/greensource_pages/templates/greensource_pages/hvac.html
+++ b/greensource_pages/templates/greensource_pages/hvac.html
@@ -8,8 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR SYSTEM UPGRADE</h1>
-            <h2>Generate more solar power</h2>
+            <h1>SOLAR PANELS UPGRADE</h1>
         </div>
     </div>
 </div>
