--- a/greensource_pages/templates/greensource_pages/off-grid-solar.html
+++ b/greensource_pages/templates/greensource_pages/off-grid-solar.html
@@ -3,13 +3,12 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} Solar street light solution{% endblock %}
+{% block title %}{{ block.super }} Off-grid solar solution{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>OFF-GRID SOLAR</h1>
-            <h2></h2>
+            <h1>OFF-GRID SOLAR INSTALLATION</h1>
         </div>
     </div>
 </div>
