--- a/greensource_pages/templates/greensource_pages/our-team.html
+++ b/greensource_pages/templates/greensource_pages/our-team.html
@@ -5,8 +5,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>OUR TEAM</h1>
-            <h2>Meet our seasoned and qualified professionals</h2>
+            <h1>GREEN ENERGY TEAM</h1>
         </div>
     </div>
 </div>
