--- a/greensource_pages/templates/greensource_pages/privacy.html
+++ b/greensource_pages/templates/greensource_pages/privacy.html
@@ -6,7 +6,6 @@
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
             <h1>PRIVACY POLICY</h1>
-            <h2></h2>
         </div>
     </div>
 </div>
@@ -115,9 +114,7 @@
             which we think you may find interesting if you tell us that you wish this to happen.
             <br /> You may request details of personal information which we hold about you under the Data Protection Act 1998.
             A small fee will be payable. If you would like a copy of the information held on you please write to
-            <a href="javascript:location='mailto:\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d';void 0">
-                <script type="text/javascript">document.write('\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script>
-            </a>
+            <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
             <br /> If you believe that any information we are holding on you is incorrect or incomplete, please write to or email
             us as soon as possible, at the above address. We will promptly correct any information found to be incorrect.
         </p>
