--- a/greensource_pages/templates/greensource_pages/product-details.html
+++ b/greensource_pages/templates/greensource_pages/product-details.html
@@ -8,8 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Products Details</h1>
-            <h2></h2>
+            <h1>PRODUCT DETAILS</h1>
         </div>
     </div>
 </div>
