--- a/greensource_pages/templates/greensource_pages/project-management.html
+++ b/greensource_pages/templates/greensource_pages/project-management.html
@@ -8,8 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>ENERGY MANAGEMENT</h1>
-            <h2>Take control of your energy bills.</h2>
+            <h1>GREEN ENERGY MANAGEMENT</h1>
         </div>
     </div>
 </div>
