--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -8,8 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>WHAT WE OFFER</h1>
-            <h2>A vast range of services for your convinience</h2>
+            <h1>SOLAR SERVICES</h1>
         </div>
     </div>
 </div>
