--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -10,8 +10,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>BLOG POST</h1>
-            <h2></h2>
+            <h1>SOLAR BLOG POST</h1>
         </div>
     </div>
 </div>
