--- a/staticfiles/home.css
+++ b/staticfiles/home.css
@@ -369,8 +369,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 /*--------------------------------------------------------------
 # HEADER
 --------------------------------------------------------------*/
-.header h1, h2{
-	margin-top:150px;
+.header h1{
+	margin-top: 150px;
+	text-transform: uppercase;
+	font-size: 14px;
 }
 .header{
 	background-image: url('images/header-img.jpg');
@@ -407,11 +409,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 .shoppingCart p{
 	position: absolute;
-	top: -5px;
-	right: -13px;
-	font-size: 0.69rem;
+	top: -13px;
+	right: -15px;
+	font-size: 0.9rem;
 	background: #b11c1c;
-	padding: 1.5px 6.5px;
+	padding: 2.5px 8.5px;
 	border-radius: 50%;
 	color: #cdcdcd;
 }
@@ -3295,6 +3297,7 @@ nav .pagination a:hover{
 	}
 	.carousel a{
 		margin-top: -150px;
+		font-size: 20px;
 	}
 	.carousel-item img{
 		height: 700px;
